@@ -9,8 +9,8 @@ semi60x60x60.bin     # volume ('uchar' format)
 1 60 1 60            # z: voxel size, dim, start/end indices
 1                    # num of media
 1 0.01 0.005 1.0     # scat(1/mm), g, mua (1/mm), n
-4	1            # detector number and radius (grid)
-29.0	19.0	0.0  # detector 1 position (grid)
-29.0	39.0	0.0  # ...
-19.0	29.0	0.0
-39.0	29.0	0.0
+4	1.0          # detector number and default radius (grid)
+29.0  19.0  0.0  1.0 # detector 1 position (grid) and radius if different
+29.0  39.0  0.0      # ..., if radius is ignored, MCX will use the default radius
+19.0  29.0  0.0  1.0 
+39.0  29.0  0.0  1.0
