@@ -2,7 +2,7 @@
 
 Author: Qianqian Fang <fangq at nmr.mgh.harvard.edu>
 License: GNU General Public License version 3 (GPLv3)
-Version: this package is part of Monte Carlo eXtreme (MCX) 0.5.1
+Version: this package is part of Monte Carlo eXtreme (MCX) 0.5.2
 
 <toc>
 
