@@ -33,7 +33,6 @@ function [flux,detphoton]=mcxlab(cfg)
 %      cfg.seed:       seed for the random number generator (integer) [0]
 %      cfg.maxdetphoton:   maximum number of photons saved by the detectors [1000000]
 %      cfg.detpos:     an N by 4 array, each row specifying a detector: [x,y,z,radius]
-%      cfg.detradius:  radius of the detector (in grid unit) [1.0]
 %      cfg.respin:     repeat simulation for the given time (integer) [1]
 %      cfg.gpuid:      which GPU to use (run 'mcx -L' to list all GPUs) [1]
 %      cfg.isreflect:  [1]-consider refractive index mismatch, 0-matched index
