@@ -2,6 +2,7 @@
 
 == MCX 0.5.2 (Black Hole - update 2), FangQ <fangq nmr mgh harvard edu> ==
 
+ 2011-09-21 fix a regression in MCXLAB related to detectors, use exact exit position for radius test
  2011-09-20 add verbose warnings for launch-time-out error and non-surface detectors
  2011-09-19 users can specify srcfrom0 (origin setting) from the input file
  2011-09-19 fix a bug in detector-to-volume mapping, effects all non-integer inputs
